--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,6 @@ warn_no_return = True
 plugins =
   mypy_django_plugin.main,
   mypy_drf_plugin.main
+
+[mypy.plugins.django-stubs]
+django_settings_module = testproj.settings
