Fix mypy config
- remove mypy drf plugin requirement
- add django-stubs to dev-requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,7 @@ warn_redundant_casts = True
 warn_unused_configs = True
 warn_unreachable = True
 warn_no_return = True
-plugins =
-  mypy_django_plugin.main,
-  mypy_drf_plugin.main
+plugins = mypy_django_plugin.main
 
 [mypy.plugins.django-stubs]
 django_settings_module = testproj.settings
