--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ envlist =
 passenv = GITHUB_WORKFLOW
 commands = python manage.py test
 deps =
-    psycopg2
+    psycopg2-binary
     dataclasses; python_version<"3.7"
     django22: django~=2.2.17  # first patch release with Python 3.9 support
+    django22: psycopg2-binary<2.9
     django31: django~=3.1.3  # first patch release with Python 3.9 support
     django32: django~=3.2.0
